fix(changelog): fix overflowing changelog (#1478)
Fixes ATOM-2512

See https://stackoverflow.com/a/28628621/14447555

--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -264,6 +264,8 @@ kbd,
   display: flex;
   row-gap: 24px;
   flex-direction: column;
+  word-wrap: anywhere;
+
   @include breakpoints.breakpoint-up(Mobile) {
     width: 100%;
   }
